--- a/runpod/package.json
+++ b/runpod/package.json
@@ -2,16 +2,18 @@
   "name": "runpod-video-encoder",
   "version": "1.0.0",
   "description": "GPU-accelerated video encoding worker for RunPod",
-  "main": "encode-worker.js",
+  "main": "handler.js",
   "type": "module",
   "scripts": {
-    "start": "node encode-worker.js"
+    "start": "node handler.js",
+    "test": "NODE_ENV=development node handler.js"
   },
   "dependencies": {
     "express": "^4.18.2",
     "fluent-ffmpeg": "^2.1.2",
     "axios": "^1.6.7",
     "multer": "^1.4.5-lts.1",
-    "winston": "^3.8.2"
+    "winston": "^3.8.2",
+    "ali-oss": "^6.20.0"
   }
 }
