--- a/runpod/package.json
+++ b/runpod/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.6.7",
     "multer": "^1.4.5-lts.1",
     "winston": "^3.8.2",
-    "ali-oss": "^6.18.1"
+    "ali-oss": "^6.18.1",
+    "googleapis": "^128.0.0"
   }
 }
