--- a/runpod/Dockerfile
+++ b/runpod/Dockerfile
@@ -53,28 +53,8 @@ RUN mkdir -p /tmp/encoding
 # Set production environment
 ENV NODE_ENV=production
 
-# Create entrypoint script for better startup
-RUN echo '#!/bin/bash\n\
-echo "🚀 Starting RunPod Video Encoder with NVENC support"\n\
-echo "🔧 GPU: $NVIDIA_VISIBLE_DEVICES"\n\
-echo "🔧 Driver capabilities: $NVIDIA_DRIVER_CAPABILITIES"\n\
-echo ""\n\
-# Verify NVENC at runtime\n\
-echo "🔍 Runtime NVENC verification:"\n\
-if nvidia-smi -L 2>/dev/null; then\n\
-    echo "✅ NVIDIA GPU detected"\n\
-    if ffmpeg -f lavfi -i testsrc=duration=1:size=320x240:rate=1 -c:v h264_nvenc -t 1 -f null - 2>/dev/null; then\n\
-        echo "🚀 NVENC WORKING! GPU encoding enabled (6x faster)"\n\
-    else\n\
-        echo "⚠️ NVENC test failed - using CPU encoding (slower but stable)"\n\
-    fi\n\
-else\n\
-    echo "⚠️ No NVIDIA GPU detected - using CPU encoding"\n\
-fi\n\
-echo ""\n\
-echo "🎯 Starting RunPod handler..."\n\
-exec python3 runpod_wrapper.py\n' > /app/entrypoint.sh \
-    && chmod +x /app/entrypoint.sh
+# Runtime verification and startup
+RUN echo "✅ Container build complete with NVENC-compatible FFmpeg"
 
-# Use entrypoint for better initialization
-ENTRYPOINT ["/app/entrypoint.sh"]
+# Start the RunPod handler directly
+CMD ["python3", "runpod_wrapper.py"]
